--- a/style.css
+++ b/style.css
@@ -93,3 +93,74 @@ body[theme="black"]{
     color: grey;
     
 }
+
+.page6{
+    min-height: 100vh;
+    width: 100%;
+}
+
+.page6 .left-side{
+    border-top: 2px solid white;
+    transition: all ease 0.5s;
+}
+
+.page6:hover .left-side{
+    border-top: 2px solid rgb(3, 3, 3);
+}
+
+.page6 video{
+    opacity: 0;
+    transition: opacity ease 0.3s;
+}
+
+.page7{
+    min-height: 100vh;
+    width: 100%;
+    background-color: black;
+    color: white;
+}
+
+.page7-content .flex h4{
+    border-radius: 50px;
+    border: 1px solid white;
+    padding: 7px 20px;
+    font-weight: 100;
+    font-size: 0.9vw;
+}
+
+.over{
+    height: 100%;
+    width: 100%;
+    background-color: #222;
+    position: absolute;
+    top: 0;
+    opacity: 0;
+    transform: translateY(-100%);
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+    
+}
+
+.page7-elem:hover .over{
+    transform: translateY(0%);
+    opacity: 1;
+}
+
+.page7-elem i{
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+}
+
+.page7-elem:hover i{
+    padding-right: 1vw;
+}
+
+.page7-elem h3{
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+}
+
+.page7-elem:hover h3{
+    padding-left: 1vw;
+}
+
+summary::marker{
+    content: none;
+}
