--- a/style.css
+++ b/style.css
@@ -164,3 +164,80 @@ body[theme="black"]{
 summary::marker{
     content: none;
 }
+
+
+.btm9-parts{
+    padding: 4vh 0;
+}
+
+.btm9-parts h5{
+    font-weight: 500;
+    font-size: 0.9vw;
+    margin-bottom: 5vh;
+}
+
+.btm9-parts h4 {
+    background-color: #111;
+    width: 75%;
+    padding: 5px 10px;
+    margin-bottom: 0.3vh;
+    border-radius: 50px;
+    font-size: 0.85vw;
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    color: white;
+
+}
+
+.btm9-parts h4 span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 1.5vw;
+    height: 1.5vw;
+    background-color: #333;
+    padding: 0.5vw;
+    border-radius: 50%;
+    margin-right: 1vw;
+}
+
+#btm9-part2 h4:nth-child(2){
+    transform: translateX(0);
+}
+#btm9-part2 h4:nth-child(3){
+    transform: translateX(10%);
+}
+#btm9-part2 h4:nth-child(4){
+    transform: translateX(20%);
+}
+#btm9-part2 h4:nth-child(5){
+    transform: translateX(30%);
+}
+#btm9-part2 h4:nth-child(6){
+    transform: translateX(40%);
+}
+#btm9-part2 h4:nth-child(7){
+    transform: translateX(50%);
+}
+
+
+#btm9-part3 h4:nth-child(2){
+    transform: translateX(0);
+}
+#btm9-part3 h4:nth-child(3){
+    transform: translateX(15%);
+}
+
+
+
+#btm9-part4 h4:nth-child(2){
+    transform: translateX(0);
+}
+#btm9-part4 h4:nth-child(3){
+    transform: translateX(20%);
+}
+
+#btm9-part4 h4:nth-child(4){
+    transform: translateX(30%);
+}
