--- a/style.css
+++ b/style.css
@@ -241,3 +241,16 @@ summary::marker{
 #btm9-part4 h4:nth-child(4){
     transform: translateX(30%);
 }
+
+
+.footer-elem h4{
+    font-size: 1vw;
+    font-weight: 900;
+    color: grey;
+}
+
+.footer-elem h5{
+    margin-top: 1vw;
+    font-size: 0.9vw;
+    line-height: 1.5;
+}
